@@ -6,6 +6,8 @@ CHANGES IN CUPS V1.1.14
 	- The ippRead() function did not verify that the
 	  attribute name length or string with language value
 	  was not larger than the read buffer.
+	- The parallel backend now recognizes the /dev/printers
+	  device directory under Linux 2.4.x.
 	- MacOS X fixes.
 	- The cupsaddsmb utility sent the server name after the
 	  user information when executing the rpcclient program.
